--- a/Frontend/Farmer/inventory/my-inventory.html
+++ b/Frontend/Farmer/inventory/my-inventory.html
@@ -12,24 +12,96 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
+    <style>
+      body {
+        background-color: #f8f9fa;
+      }
+      .sidebar {
+        height: 100vh;
+        background-color: #343a40;
+        color: white;
+      }
+      .sidebar a {
+        color: white;
+        text-decoration: none;
+        padding: 10px;
+        display: block;
+      }
+      .sidebar a:hover {
+        background-color: #495057;
+      }
+      .card {
+        background-color: whitesmoke;
+      }
+    </style>
   </head>
   <body>
     <div class="container-fluid">
       <div class="row">
-        <nav class="col-md-2 sidebar d-none d-md-block">
-          <h4 class="text-center mb-4 sidebar-title">Farmer Panel</h4>
-          <a href="#"><i class="fas fa-tachometer-alt me-2"></i>Dashboard</a>
-          <a href="#" class="active"
-            ><i class="fas fa-boxes me-2"></i>My Inventory</a
-          >
-          <a href="#"><i class="fas fa-plus-circle me-2"></i>Add Product</a>
-          <a href="#"><i class="fas fa-shopping-cart me-2"></i>Orders</a>
-          <a href="#"><i class="fas fa-rupee-sign me-2"></i>Payments</a>
-          <a href="#"><i class="fas fa-sign-out-alt me-2"></i>Logout</a>
+        <nav class="navbar navbar-expand-lg">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html"
+              ><img class="logo" src="../../asessts/logo.jpg" alt=""
+            /></a>
+
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNavAltMarkup"
+              aria-controls="navbarNavAltMarkup"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a
+                  class="nav-link px-3 py-2 mx-1 fs-7 fw-bold"
+                  href="../index.html"
+                  >Dashboard</a
+                >
+                <a
+                  class="nav-link px-3 py-2 mx-1 fs-7 fw-bold"
+                  href="../Orders/index.html"
+                  >Orders</a
+                >
+                <a
+                  class="nav-link px-3 py-2 mx-1 fs-7 fw-bold"
+                  aria-current="page"
+                  href="./my-inventory.html"
+                  >Inventory</a
+                >
+                <a class="nav-link px-3 py-2 mx-1 fs-7 fw-bold" href="#"
+                  >Products</a
+                >
+                <a class="nav-link px-3 py-2 mx-1 fs-7 fw-bold" href="#"
+                  >Payments</a
+                >
+              </div>
+
+              <div class="ms-auto d-flex align-items-center">
+                <img
+                  src="../../asessts/profile.jpg"
+                  alt="Profile"
+                  class="rounded-circle"
+                  width="40"
+                  height="40"
+                />
+              </div>
+            </div>
+          </div>
         </nav>
 
-        <main class="col-md-10 ms-sm-auto px-md-4 py-4 main-content">
+        <main class="col-md-12 ms-sm-auto px-md-4 py-4 main-content">
           <div
             class="d-flex justify-content-between align-items-center mb-4 header-section"
           >
@@ -70,8 +142,8 @@
                 <tr>
                   <th>Product Name</th>
                   <th>Category</th>
-                  <th>Price (₹/kg)</th>
-                  <th>Stock (kg)</th>
+                  <th>Price (₹)</th>
+                  <th>Stock</th>
                   <th>Unit</th>
                   <th>Status</th>
                   <th>Last Updated</th>
@@ -222,6 +294,7 @@
               <label class="form-label">Stock</label>
               <input
                 type="number"
+                class="form-control"
                 class="form-control"
                 id="editProductStock"
                 required
