--- a/Frontend/Admin/admin.html
+++ b/Frontend/Admin/admin.html
@@ -4,12 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Admin Dashboard - AgriBazaar</title>
-
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <!-- Custom CSS -->
   <link rel="stylesheet" href="admin.css" />
 </head>
 <body>
@@ -67,7 +63,7 @@
             <canvas id="ordersChart" height="100"></canvas>
           </div>
         </div>
-      </div> <!-- /Main Content -->
+      </div>
     </div>
   </div>
 
