feat: added product page + updated farmer's dashboard with additional elements 💻

--- a/Frontend/Farmer/inventory/my-inventory.html
+++ b/Frontend/Farmer/inventory/my-inventory.html
@@ -80,10 +80,14 @@
                   href="./my-inventory.html"
                   >Inventory</a
                 >
-                <a class="nav-link px-3 py-2 mx-1 fs-7 fw-bold" href="#"
+                <a
+                  class="nav-link px-3 py-2 mx-1 fs-7 fw-bold"
+                  href="../Products/index.html"
                   >Products</a
                 >
-                <a class="nav-link px-3 py-2 mx-1 fs-7 fw-bold" href="#"
+                <a
+                  class="nav-link px-3 py-2 mx-1 fs-7 fw-bold"
+                  href="../Payment/index.html"
                   >Payments</a
                 >
               </div>
