--- a/Frontend/Farmer/Orders/index.html
+++ b/Frontend/Farmer/Orders/index.html
@@ -13,6 +13,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
@@ -20,7 +21,7 @@
         <a class="navbar-brand" href="../index.html"
           ><img class="logo" src="../../asessts/logo.jpg" alt=""
         /></a>
- 
+
         <button
           class="navbar-toggler"
           type="button"
@@ -32,7 +33,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
- 
+
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link px-3 py-2 mx-1 fs-7 fw-bold" href="../index.html"
@@ -56,7 +57,7 @@
               >Payments</a
             >
           </div>
- 
+
           <div class="ms-auto d-flex align-items-center">
             <img
               src="../../asessts/profile.jpg"
@@ -71,7 +72,7 @@
     </nav>
     <div class="container py-4">
       <h2 class="text-center mb-4">All Orders</h2>
- 
+
       <div class="row mb-4">
         <div class="col-md-3">
           <label for="startDate" class="form-label">Start Date</label>
@@ -105,7 +106,7 @@
           </button>
         </div>
       </div>
- 
+
       <div class="card shadow">
         <div class="card-body">
           <table class="table table-bordered text-center table-hover">
@@ -123,17 +124,16 @@
             </thead>
             <tbody id="orderBody"></tbody>
           </table>
- 
+
           <nav class="pgB">
             <ul class="pagination justify-content-center" id="pagination"></ul>
           </nav>
         </div>
       </div>
     </div>
- 
+
     <script src="script.js"></script>
- 
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
- 
