--- a/Frontend/Farmer/Payment/index.html
+++ b/Frontend/Farmer/Payment/index.html
@@ -28,7 +28,7 @@
       <!-- Left-aligned links -->
       <div class="navbar-nav">
         <a class="nav-link px-3 py-2 mx-1 fs-7 fw-bold" href="../index.html">Dashboard</a>
-        <a class="nav-link px-3 py-2 mx-1 fs-7 fw-bold" href="./Orders/index.html">Orders</a>
+        <a class="nav-link px-3 py-2 mx-1 fs-7 fw-bold" href="../Orders/index.html">Orders</a>
         <a class="nav-link px-3 py-2 mx-1 fs-7 fw-bold" href="../inventory/my-inventory.html">Inventory</a>
         <a class="nav-link px-3 py-2 mx-1 fs-7 fw-bold" href="../Products/index.html">Products</a>
         <a class="nav-link px-3 py-2 mx-1 fs-7 fw-bold" href="../Payment/index.html">Payments</a>
