feat: Added Products page for Admin Side

--- a/Frontend/Admin/sidebar.html
+++ b/Frontend/Admin/sidebar.html
@@ -2,7 +2,7 @@
   <h4 class="text-center text-white">AgriBazaar</h4>
   <a href="admin.html">Dashboard</a>
   <a href="manage_users.html">Manage Users</a>
-  <a href="#">Products</a>
+  <a href="products.html">Products</a>
   <a href="orders.html">Orders</a>
   <a href="#">Logout</a>
 </div>
