demo folder added for screenshot

--- a/Frontend/Farmer/Products/index.html
+++ b/Frontend/Farmer/Products/index.html
@@ -59,7 +59,7 @@
                   >Inventory</a
                 >
                 <a
-                  class="nav-link px-3 py-2 mx-1 fs-7 fw-bold active"
+                  class="nav-link px-3 py-2 mx-1 fs-7 fw-bold"
                   href="./index.html"
                   >Products</a
                 >
