--- a/Frontend/Farmer/index.html
+++ b/Frontend/Farmer/index.html
@@ -136,7 +136,18 @@
           <!-- Original Welcome Section -->
           <div class="text-center">
             <h2>Welcome, Farmer</h2>
-            <p>!!Rating of the farmer !!</p>
+              <!-- Rating Toggle Button -->
+        <p>
+          <button class="btn btn-link fw-bold text-success text-decoration-none" onclick="toggleRating()">⭐ View Your Rating</button>
+        </p>
+
+        <!-- Hidden Rating Section -->
+        <div id="ratingSection" class="text-center d-none">
+          <h5>Your Rating</h5>
+          <p style="font-size: 20px;">⭐ ⭐ ⭐ ⭐ ☆ <span class="text-muted">(4.0 / 5)</span></p>
+          <p class="text-secondary small">Based on customer feedback from recent orders.</p>
+        </div>
+      </div>
           </div>
 
           <!-- Original Summary Cards -->
