--- a/Frontend/Farmer/inventory/my-inventory.html
+++ b/Frontend/Farmer/inventory/my-inventory.html
@@ -18,6 +18,8 @@
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="../styles.css" />
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="../../validate-farmer.js"></script>
     <style>
       body {
         background-color: #f8f9fa;
