--- a/Frontend/Farmers_Login_page.html
+++ b/Frontend/Farmers_Login_page.html
@@ -6,6 +6,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="validate-farmer.js"></script>
 
 <style>
     .form-container {
@@ -36,7 +37,7 @@
     <!-- Login tab -->
     <div id="login" class="tab-pane fade show active">
         <h4>Login</h4>
-        <form id="loginForm">
+        <form id="farmerLoginForm">
             <div class="mb-3">
                 <label for="loginEmail" class="form-label">Email</label>
                 <input id="loginEmail" type="email" class="form-control" required>
@@ -52,7 +53,7 @@
     <!-- Registration tab -->
     <div id="register" class="tab-pane fade">
         <h4>Registration</h4>
-        <form id="userRegisterForm">
+        <form id="farmerRegisterForm">
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
                 <input id="email" type="email" class="form-control" required>
@@ -70,7 +71,7 @@
     </div>
 </div>
 
-<script>
+<!-- <script>
     // Registration Validation and AJAX submission
     $("#userRegisterForm").submit(function (e) {
         e.preventDefault();
@@ -131,7 +132,7 @@
         console.log("Login with", email, password);
         alert("Login successful!");
     });
-</script>
+</script> -->
 
 </body>
 </html>
