feat: made landing page connect to auth pages

--- a/Frontend/LoginSignupPages/Users_Login_page.html
+++ b/Frontend/LoginSignupPages/Users_Login_page.html
@@ -79,7 +79,7 @@
           <label for="loginPassword" class="form-label">Password</label>
           <input id="loginPassword" type="password" class="form-control" required>
         </div>
-        <button type="submit" class="btn btn-primary w-100">Login as Farmer</button>
+        <button type="submit" class="btn btn-primary w-100">Login as User</button>
       </form>
     </div>
 
@@ -99,7 +99,7 @@
           <label for="confirmPassword" class="form-label">Confirm Password</label>
           <input id="confirmPassword" type="password" class="form-control" required>
         </div>
-        <button type="submit" class="btn btn-primary w-100">Register as Farmer</button>
+        <button type="submit" class="btn btn-primary w-100">Register as User</button>
       </form>
     </div>
   </div>
