--- a/Frontend/LoginSignupPages/Farmers_Login_page.html
+++ b/Frontend/LoginSignupPages/Farmers_Login_page.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AgriBazaar</title>
+  <title>AgriBazaar - Farmer Auth</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../validate-farmer.js"></script> 
 
   <style>
     body {
-  background: no-repeat center center fixed;
-  background-size: cover;
-  background-blend-mode: lighten;
-  background-color: #f0fdf4;
-  font-family: 'Segoe UI', sans-serif;
-}
-
+      background: no-repeat center center fixed;
+      background-size: cover;
+      background-blend-mode: lighten;
+      background-color: #f0fdf4;
+      font-family: 'Segoe UI', sans-serif;
+    }
 
     .form-container {
       max-width: 420px;
@@ -57,20 +57,21 @@
 
   <h1 class="text-center mt-5">AgriBazaar</h1>
 
+  <!-- Nav Tabs -->
   <ul class="nav nav-tabs justify-content-center mt-4">
     <li class="nav-item">
-      <a class="nav-link active" data-bs-toggle="tab" href="#login">Login</a>
+      <a class="nav-link active" data-bs-toggle="tab" href="#farmerLogin">Login</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-bs-toggle="tab" href="#register">SignUp</a>
+      <a class="nav-link" data-bs-toggle="tab" href="#farmerRegister">SignUp</a>
     </li>
   </ul>
 
   <div class="tab-content form-container">
-    <!-- Login tab -->
-    <div id="login" class="tab-pane fade show active">
+    <!-- Login Tab -->
+    <div id="farmerLogin" class="tab-pane fade show active">
       <h4>Login</h4>
-      <form id="loginForm">
+      <form id="farmerLoginForm">
         <div class="mb-3">
           <label for="loginEmail" class="form-label">Email</label>
           <input id="loginEmail" type="email" class="form-control" required>
@@ -83,10 +84,10 @@
       </form>
     </div>
 
-    <!-- Registration tab -->
-    <div id="register" class="tab-pane fade">
+    <!-- Register Tab -->
+    <div id="farmerRegister" class="tab-pane fade">
       <h4>SignUp</h4>
-      <form id="userRegisterForm">
+      <form id="farmerRegisterForm">
         <div class="mb-3">
           <label for="email" class="form-label">Email</label>
           <input id="email" type="email" class="form-control" required>
@@ -103,68 +104,6 @@
       </form>
     </div>
   </div>
-
-  <script>
-    // Registration Validation and AJAX submission
-    $("#userRegisterForm").submit(function (e) {
-      e.preventDefault();
-
-      let email = $("#email").val().trim();
-      let password = $("#password").val().trim();
-      let confirmPassword = $("#confirmPassword").val().trim();
-      let error = "";
-
-      if (!(/^[\w.-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/.test(email))) {
-        error = "Invalid email format.";
-      } else if (password.length < 6) {
-        error = "Password too weak, minimum 6 chars.";
-      } else if (!/\d/.test(password) || !/[!@#$%^&*]/.test(password)) {
-        error = "Password must contain a number and a symbol.";
-      } else if (password !== confirmPassword) {
-        error = "Passwords do not match.";
-      }
-
-      if (error !== "") {
-        alert(error);
-      } else {
-        $.ajax({
-          url: "/api/user/register", // Change to your API endpoint
-          method: "POST",
-          contentType: "application/json",
-          data: JSON.stringify({ email, password }),
-          success: function (res) {
-            console.log("Registered!", res);
-            alert("Registration successful!");
-          },
-          error: function (err) {
-            console.error(err);
-            alert("Registration failed!");
-          }
-        });
-      }
-    });
-
-    // Login submission
-    $("#loginForm").submit(function (e) {
-      e.preventDefault();
-
-      let email = $("#loginEmail").val().trim();
-      let password = $("#loginPassword").val().trim();
-
-      if (email.length === 0) {
-        alert("Email cannot be empty.");
-        return;
-      }
-      if (password.length < 6) {
-        alert("Password must be minimum 6 chars.");
-        return;
-      }
-
-      // AJAX logic or mock response
-      console.log("Login with", email, password);
-      alert("Login successful!");
-    });
-  </script>
 
 </body>
 </html>
