--- a/Frontend/LoginSignupPages/Users_Login_page.html
+++ b/Frontend/LoginSignupPages/Users_Login_page.html
@@ -6,6 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../validate-user.js"></script>
 
   <style>
     body {
@@ -103,68 +104,6 @@
       </form>
     </div>
   </div>
-
-  <script>
-    // Registration Validation and AJAX submission
-    $("#userRegisterForm").submit(function (e) {
-      e.preventDefault();
-
-      let email = $("#email").val().trim();
-      let password = $("#password").val().trim();
-      let confirmPassword = $("#confirmPassword").val().trim();
-      let error = "";
-
-      if (!(/^[\w.-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/.test(email))) {
-        error = "Invalid email format.";
-      } else if (password.length < 6) {
-        error = "Password too weak, minimum 6 chars.";
-      } else if (!/\d/.test(password) || !/[!@#$%^&*]/.test(password)) {
-        error = "Password must contain a number and a symbol.";
-      } else if (password !== confirmPassword) {
-        error = "Passwords do not match.";
-      }
-
-      if (error !== "") {
-        alert(error);
-      } else {
-        $.ajax({
-          url: "/api/user/register", // Change to your API endpoint
-          method: "POST",
-          contentType: "application/json",
-          data: JSON.stringify({ email, password }),
-          success: function (res) {
-            console.log("Registered!", res);
-            alert("Registration successful!");
-          },
-          error: function (err) {
-            console.error(err);
-            alert("Registration failed!");
-          }
-        });
-      }
-    });
-
-    // Login submission
-    $("#loginForm").submit(function (e) {
-      e.preventDefault();
-
-      let email = $("#loginEmail").val().trim();
-      let password = $("#loginPassword").val().trim();
-
-      if (email.length === 0) {
-        alert("Email cannot be empty.");
-        return;
-      }
-      if (password.length < 6) {
-        alert("Password must be minimum 6 chars.");
-        return;
-      }
-
-      // AJAX logic or mock response
-      console.log("Login with", email, password);
-      alert("Login successful!");
-    });
-  </script>
 
 </body>
 </html>
