--- a/Frontend/LoginSignupPages/farmer_admin_page.html
+++ b/Frontend/LoginSignupPages/farmer_admin_page.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../validate-admin.js"></script>
   <style>
     body {
       background: url('https://images.unsplash.com/photo-1582272756033-d52b1f52db62') no-repeat center center fixed;
@@ -39,10 +40,9 @@
 </head>
 <body>
 
-  <!-- <div class="container text-center mt-4">
-    <img src="Frontend/assets/logo.jpg" height="1000px" alt="Logo" />
+  <div class="container text-center mt-4">
     <h2 class="text-success mt-2">Admin Portal</h2>
-  </div> -->
+  </div>
 
   <!-- Nav Pills -->
   <ul class="nav nav-pills justify-content-center mt-4" id="authTabs">
@@ -93,39 +93,6 @@
     </form>
   </div>
 
-  <script>
-    // Toggle Login/Signup
-    $(".nav-link").click(function (e) {
-      e.preventDefault();
-      $(".nav-link").removeClass("active");
-      $(this).addClass("active");
-
-      const target = $(this).data("target");
-      $("form").addClass("d-none");
-      $("#" + target).removeClass("d-none");
-    });
-
-    // Login form handling
-    $("#loginForm").submit(function (e) {
-      e.preventDefault();
-      const email = $("#adminEmail").val().trim();
-      const phone = $("#adminPhone").val().trim();
-      const password = $("#adminPassword").val().trim();
-
-      if (email === "admin@agribazaar.com" && password === "admin123" && /^\d{10}$/.test(phone)) {
-        alert("Login successful!");
-        window.location.href = "/admin/index.html";
-      } else {
-        alert("Invalid login credentials.");
-      }
-    });
-
-    // Signup dummy handler
-    $("#signupForm").submit(function (e) {
-      e.preventDefault();
-      alert("Signup request submitted! (not wired yet)");
-    });
-  </script>
 
 </body>
 </html>
