feat: user access to user dashboard via login page

--- a/Frontend/user/cart.html
+++ b/Frontend/user/cart.html
@@ -159,7 +159,7 @@
     <nav>
       <a href="ex.html">Home</a>
       <a href="ex.html#products">Products</a>
-      <a href="ex.html#settings">Settings</a>
+      <a href="transactions.html">My Orders</a>
       <a href="ex.html#contact">Contact</a>
     </nav>
   </header>
