--- a/Frontend/user/success.html
+++ b/Frontend/user/success.html
@@ -21,7 +21,7 @@
     }
 
     header {
-      background-color: #4CAF50;
+      background-color: #208a25;
       color: white;
       padding: 1rem 2rem;
       display: flex;
@@ -54,7 +54,7 @@
     }
 
     h2 {
-      color: #4CAF50;
+      color: #208a25;
       font-size: 2rem;
       margin-bottom: 20px;
     }
@@ -72,7 +72,7 @@
     }
 
     .btn {
-      background-color: #4CAF50;
+      background-color: #208a25;
       color: white;
       border: none;
       padding: 12px 24px;
@@ -84,7 +84,7 @@
     }
 
     .btn:hover {
-      background-color: #388e3c;
+      background-color: #208a25;
     }
 
     footer {
@@ -102,7 +102,7 @@
     <nav>
       <a href="ex.html">Home</a>
       <a href="ex.html#products">Products</a>
-      <a href="ex.html#settings">Settings</a>
+      <a href="transactions.html">My Orders</a>
       <a href="ex.html#contact">Contact</a>
     </nav>
   </header>
