--- a/Frontend/Admin/manage_users.html
+++ b/Frontend/Admin/manage_users.html
@@ -19,7 +19,7 @@
         <div class="header d-flex justify-content-between align-items-center">
           <button id="sidebarToggle" class="btn btn-outline-success d-md-none">☰</button>
           <h4 class="m-0">Manage Users</h4>
-          <button class="btn btn-sm btn-outline-success">Logout</button>
+          <a href="/Frontend/Landing/index.html" class="btn btn-sm btn-outline-success">Logout</a>
         </div>
 
         <div class="container mt-4">
