fix: heading issue, chore: unnecessary doc removal

--- a/Frontend/Landing/index.html
+++ b/Frontend/Landing/index.html
@@ -364,7 +364,7 @@
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="../asessts/logo.jpg" alt="FarmFresh Logo" />
-          FarmFresh
+          AgriBazaar
         </a>
         <button
           class="navbar-toggler"
